# space-invaders-raylib

./: .clang-format  .clang-tidy  .gitignore  CAMBIOS.md  CLASES.md  CMakeLists.txt  LICENSE  Makefile  README.md  README_POO.md  RESUMEN_LIMPIEZA.md  build.py  vcpkg.json
.github/workflows/: ci.yml  release.yml
include/core/: AssetManager.h  EntityManager.h  Game.h
include/entities/: Alien.h  BarrierBlock.h  Bullet.h  Entity.h  Player.h
src/: Alien.cpp  AssetManager.cpp  BarrierBlock.cpp  Bullet.cpp  Entity.cpp  EntityManager.cpp  Game.cpp  Player.cpp  main.cpp
src/core/: AssetManager.cpp  EntityManager.cpp  Game.cpp
src/entities/: Alien.cpp  BarrierBlock.cpp  Bullet.cpp  Entity.cpp  Player.cpp
